welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:16: error: illegal start of simple expression
}        
^SlugTracking:17: error: 'while' expected but '}' found.
}
^