welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
avance();
do {
if (getCouleurSol=Color.green)
	{
		avance();
	}

	if (estFaceMur || getCouleurSol!=Color.green)
	{
		droite();
		avance();
	}
while (!estSurBiscuit)
}        
}
